WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280964
Regression (
284080@main
): ScreenCaptureKitCaptureSource may fail capture due to the whenReady callback being called before totally stopping capture
https://bugs.webkit.org/show_bug.cgi?id=280964
Summary
Regression (284080@main): ScreenCaptureKitCaptureSource may fail capture due ...
youenn fablet
Reported
2024-10-07 02:33:07 PDT
ScreenCaptureKitCaptureSource may fail capture due to the whenReady callback being called before totally stopping capture
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-07 02:33:31 PDT
<
rdar://problem/137414283
>
youenn fablet
Comment 2
2024-10-07 02:43:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34763
EWS
Comment 3
2024-10-09 06:54:17 PDT
Committed
284891@main
(76398a9a4508): <
https://commits.webkit.org/284891@main
> Reviewed commits have been landed. Closing PR #34763 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug